# Will-app

./: .gitignore  README.md  RESEARCH.md  pyproject.toml  will.config.example.toml  yizhi.config.example.toml
data/: funding_cache.json
docs/: README.md  adr-001-build-rent-port.md  adr-002-pi-agent-delegated-execution.md  adr-003-self-model.md  adr-004-campaign-autonomy-architecture.md  adr-005-will-soul-collaboration.md  adr-006-will-harness-kernel.md  adr-007-autonomous-campaign-architecture.md  arbbot-action-environment.md  context-acquisition-strategy.md  data-via-vps.md  evaluation-protocol.md  memory-fork-strategy.md  module-map.md  persona-will-research.md  project-status.md  references.md  resident-operator-plan.md  strategy-deep-dive.md  technical-stack-rfc.md  theory-of-memory.md  theory-of-will.md  web-panel.md  what-is-will.md  will-agent-architecture.md  will-engine-production-roadmap.md  will-engine-whitepaper.md  will-problems-summary.md  yizhi-problems-summary.md
scripts/: bootstrap_papers.py  build_funding_dataset.py  build_funding_experiment_queue.py  build_funding_promotion_packet.py  execute_funding_experiment_queue.py  fetch_funding_via_vps.py
tests/: conftest.py  test_anthropic_llm.py  test_arbbot_environment.py  test_autonomy.py  test_budget.py  test_calibration.py  test_campaign_adoption.py  test_campaign_environment.py  test_campaign_executor.py  test_campaigns.py  test_channels.py  test_chat.py  test_critique.py  test_daemon.py  test_delegation.py  test_dialogue.py  test_drives.py  test_embedding.py  test_eval_loops.py  test_event_store.py  test_fundarb_dataset.py  test_fundarb_execution.py  test_fundarb_experiments.py  test_fundarb_packets.py  test_goal_lifecycle.py  test_hypothesis.py  test_intention.py  test_judgment.py  test_lenses.py  test_liaison_agent.py  test_liaison_store.py  test_liaison_tools.py  test_llm.py  test_memory.py  test_memory_loop.py  test_patches.py  test_planning.py  test_policy_gates.py  (+11 more)
(+139 files in other folders)
