[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "will"
version = "0.1.0"
description = "Local governed Will Agent v0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
llm = [
  "openai>=1.0",
]
litellm = [
  "litellm>=1.0",
]
embedding = [
  "fastembed>=0.3",
]
web = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
]

[project.scripts]
will = "yizhi.cli:main"
yizhi = "yizhi.cli:main"

[tool.setuptools.package-data]
"yizhi.web" = ["templates/*.html", "static/*"]

[tool.setuptools.packages.find]
include = ["yizhi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
