[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "will"
version = "0.1.0"
description = "Local Autonomous Campaign Harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
llm = [
  "openai>=1.0",
]

[project.scripts]
will = "will.cli:main"

[tool.setuptools.packages.find]
include = ["will*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
